--- a/.backups/frontend/styles.css
+++ b/.backups/frontend/styles.css
@@ -3,3 +3,22 @@
 }
 
 canvas { border: 1px solid black; }
+
+.logo {
+    display: inline-block;
+    text-decoration: none;
+    height: 86px;
+    width: 40%;
+}
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    width: 70%;
+}
+
+hr {
+    background-color: red;
+}
