--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -3,3 +3,14 @@
 }
 
 canvas { border: 1px solid black; }
+
+.logo {
+    display: inline-block;
+    text-decoration: none;
+    height: 86px;
+    width: 40%;
+}
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+}
