--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -14,3 +14,11 @@ canvas { border: 1px solid black; }
 h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.container {
+    width: 70%;
+}
+
+hr {
+    background-color: red;
+}
